frontend: Add padding to avoid footer overlapping page content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,10 @@ h6 {
     font-family: 'Roboto Slab', serif;
 }
 
+main {
+    padding-bottom: 2rem;;
+}
+
 footer {
     position: fixed;
     bottom: 0;
